--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -12,3 +12,16 @@ button{
   margin-right: auto;
   margin-left: auto;
 }
+
+/* Navbar traslúcida */
+.navbar.bg-body-tertiary {
+  background-color: rgba(255, 255, 255, 0.5) !important;
+  backdrop-filter: blur(01%);
+}
+
+/* Texto de bienvenida más grande */
+.container h1 {
+  color: antiquewhite;
+  text-align: center;
+  font-size: 3rem; /* Aumenta el tamaño del texto */
+}
