--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,8 +1,8 @@
 .login-container {
-  background-color: rgb(241, 237, 237);
-  border: 3px solid #eef0f1;
+  background-color: rgba(255, 255, 255, 0.5);
+  border: 3px solid rgba(255, 255, 255, 0.5);
   border-radius: 10px;
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0.5rem 1rem rgba(255, 255, 255, 0.5);
   padding: 2rem;
   position: relative;
   max-width: 400px;
@@ -13,7 +13,7 @@
 .user-icon {
   width: 100px;
   height: 100px;
-  background-color: #140e46;
+  background-color: rgba(0, 0, 0, 0.5);
   border-radius: 50%;
   position: absolute;
   top: -75px;
@@ -62,11 +62,23 @@ label {
   color: #aaa;
 }
 
-input {
+.input-container input {
   width: 100%;
-  padding: 10px 10px 10px 40px; /* Adjust padding for icon */
+  padding: 10px 40px 10px 40px; /* Adjust padding for icon */
   border: 1px solid #ccc;
   border-radius: 5px;
+}
+
+.toggle-password {
+  position: absolute;
+  top: 50%;
+  left: 290px;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #aaa;
+  padding: 0;
 }
 
 button {
@@ -74,7 +86,7 @@ button {
   padding: 10px;
   border: none;
   border-radius: 5px;
-  background: #007bff;
+  background: #bfc5cc;
   color: #fff;
   font-size: 16px;
   cursor: pointer;
@@ -85,7 +97,7 @@ button:disabled {
 }
 
 button:hover:not(:disabled) {
-  background: #0056b3;
+  background: #99b6d5;
 }
 
 .text-danger {
@@ -96,72 +108,6 @@ button:hover:not(:disabled) {
   margin-bottom: 1rem;
 }
 
-.form-control {
-  border-radius: 0.25rem;
-  padding: 0.5rem;
-}
-
 .btn-block {
   width: 100%;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.separator {
-  display: flex;
-  align-items: center;
-  text-align: center;
-  margin: 20px 0;
-}
-
-.separator::before,
-.separator::after {
-  content: '';
-  flex: 1;
-  border-bottom: 1px solid #000;
-}
-
-.separator:not(:empty)::before {
-  margin-right: .25em;
-}
-
-.separator:not(:empty)::after {
-  margin-left: .25em;
-}
-
-.social-icons {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
-}
-
-.social-icons button {
-  margin: 0 10px;
-  border: none;
-  background: none;
-  cursor: pointer;
-}
-
-.social-icon {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s ease;
-}
-
-.social-icon img {
-  width: 20px;
-  height: 20px;
-}
-
-.social-icon:hover {
-  transform: scale(1.1);
 }
