--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,49 +1,34 @@
 <div class="login-container">
   <div class="user-icon">
-    <i class="material-icons">person</i>
+    <i class="material-icons">home</i>
   </div>
-  <h3 class="card-title">Login</h3>
+  <h3 class="card-title">Inicio de sesion</h3>
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label for="username">Username</label>
+      <label for="username">Usuario</label>
       <div class="input-container">
         <i class="material-icons">person</i>
-        <input id="username" formControlName="username" type="email" placeholder="john@mail.com" required>
+        <input id="username" formControlName="username" type="email" placeholder="hola@gmail.com" required>
       </div>
       <div *ngIf="loginForm.get('username')?.invalid && (loginForm.get('username')?.dirty || loginForm.get('username')?.touched)">
-        <small *ngIf="loginForm.get('username')?.errors?.['required']" class="text-danger">Email is required.</small>
-        <small *ngIf="loginForm.get('username')?.errors?.['email']" class="text-danger">Enter a valid email.</small>
+        <small *ngIf="loginForm.get('username')?.errors?.['required']" class="text-danger">Correo no puede estar vacio.</small>
+        <small *ngIf="loginForm.get('username')?.errors?.['email']" class="text-danger">Ingresa un correo valido.</small>
       </div>
     </div>
     <div class="form-group">
       <label for="password">Password</label>
       <div class="input-container">
         <i class="material-icons">lock</i>
-        <input id="password" formControlName="password" type="password" maxlength="8" required>
+        <input id="password" formControlName="password" [type]="hide ? 'password' : 'text'" maxlength="10" required>
+        <button type="button" class="toggle-password" (click)="togglePasswordVisibility()">
+          <i class="material-icons">{{hide ? 'visibility_off' : 'visibility'}}</i>
+        </button>
       </div>
       <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched)">
-        <small *ngIf="loginForm.get('password')?.errors?.['required']" class="text-danger">Password is required.</small>
-        <small *ngIf="loginForm.get('password')?.errors?.['minlength']" class="text-danger">Password must be at least 8 characters long.</small>
-        <small *ngIf="loginForm.get('password')?.errors?.['maxlength']" class="text-danger">Password cannot exceed 8 characters.</small>
+        <small *ngIf="loginForm.get('password')?.errors?.['required']" class="text-danger">Password no puede estar vacio.</small>
+        <small *ngIf="loginForm.get('password')?.errors?.['maxlength']" class="text-danger">Password no puede tener más de 8 caracteres.</small>
       </div>
     </div>
-    <button type="submit" [disabled]="!loginForm.valid" class="btn btn-primary btn-block">Next</button>
+    <button type="submit" [disabled]="!loginForm.valid" class="btn btn-primary btn-block">Iniciar</button>
   </form>
-  <div class="text-center mt-3">
-    <p>Don't have an account? <a href="#">Sign up</a></p>
-    <div class="separator">
-      <span>or connect with</span>
-    </div>
-    <div class="social-icons">
-      <button mat-icon-button aria-label="Login with Facebook" class="social-icon">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook">
-      </button>
-      <button mat-icon-button aria-label="Login with Instagram" class="social-icon">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/600px-Instagram_logo_2022.svg.png" alt="Instagram">
-      </button>
-      <button mat-icon-button aria-label="Login with GitHub" class="social-icon">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub">
-      </button>
-    </div>
-  </div>
 </div>
