--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -8,11 +8,10 @@
       <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Pokes
+            Productos
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/prin">Lista</a></li>
-            <li><a class="dropdown-item" href="#">Agregar</a></li>
           </ul>
         </li>
       </ul>
