--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -64,7 +64,7 @@ label {
 
 .input-container input {
   width: 100%;
-  padding: 10px 40px 10px 40px; /* Adjust padding for icon */
+  padding: 10px 40px 10px 40px; 
   border: 1px solid #ccc;
   border-radius: 5px;
 }
