--- a/src/app/components/inicio/inicio.component.css
+++ b/src/app/components/inicio/inicio.component.css
@@ -13,15 +13,13 @@ button{
   margin-left: auto;
 }
 
-/* Navbar traslúcida */
 .navbar.bg-body-tertiary {
   background-color: rgba(255, 255, 255, 0.5) !important;
   backdrop-filter: blur(01%);
 }
 
-/* Texto de bienvenida más grande */
 .container h1 {
   color: antiquewhite;
   text-align: center;
-  font-size: 3rem; /* Aumenta el tamaño del texto */
+  font-size: 3rem; 
 }
