--- a/src/app/components/principal/principal.component.css
+++ b/src/app/components/principal/principal.component.css
@@ -3,26 +3,53 @@
 }
 
 table {
-  width: 100%;
-  border-collapse: collapse;
+  border-collapse: separate;
+  position: relative;
+  max-width: 70%;
+  margin: 0px auto;
 }
 
 th, td {
-  padding: 10px;
-  text-align: left;
+  padding: 0px;
   border-bottom: 1px solid #ddd;
+  background-color: rgba(255, 255, 255, 0.5);
+  text-align: center;
 }
 
-th {
-  background-color: #f4f4f4;
-}
-
-.pokemon-image {
+.product-image {
   width: 50px;
   height: 50px;
 }
 
 .modal-body img {
-  width: 100px;
-  height: 100px;
+  width: 300px;
+  height: 300px;
+}
+
+.btn-sm {
+  margin-right: 5px;
+}
+
+.navbar.bg-body-tertiary {
+  background-color: rgba(255, 255, 255, 0.5) !important;
+  backdrop-filter: blur(01%);
+}
+
+h1 {
+  color: antiquewhite;
+  text-align: center;
+  font-size: 3rem;
+}
+
+mat-paginator {
+  background-color: rgba(255, 255, 255, 0.5);
+  position: relative;
+  max-width: 70%;
+  margin: 0px auto;
+}
+
+.add-button-container { 
+  display: flex;
+  justify-content: center; 
+  margin-bottom: 1rem;
 }
