--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -41,11 +41,11 @@
         </div>
         <ul class="list-group" *ngIf="user">
           <li class="list-group-item"><strong>ID:</strong> {{ user.id }}</li>
-          <li class="list-group-item"><strong>Email:</strong> {{ user.email }}</li>
-          <li class="list-group-item"><strong>Name:</strong> {{ user.name }}</li>
-          <li class="list-group-item"><strong>Role:</strong> {{ user.role }}</li>
-          <li class="list-group-item"><strong>Created At:</strong> {{ user.creationAt }}</li>
-          <li class="list-group-item"><strong>Updated At:</strong> {{ user.updatedAt }}</li>
+          <li class="list-group-item"><strong>Correo:</strong> {{ user.email }}</li>
+          <li class="list-group-item"><strong>Nombre:</strong> {{ user.name }}</li>
+          <li class="list-group-item"><strong>Rol:</strong> {{ user.role }}</li>
+          <li class="list-group-item"><strong>Creado El:</strong> {{ user.creationAt }}</li>
+          <li class="list-group-item"><strong>Editado El:</strong> {{ user.updatedAt }}</li>
         </ul>
       </div>
       <div class="modal-footer">
